# autoGenILA

./: .gitignore  README.md
src/func_extract/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists_dlbraun.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  debug.txt  hier.txt  idea.txt  mem_info.txt  oc8051.txt  printf.ll  reg_info.txt  reroll.ll  result.txt  rst_vals.txt  scp.sh  tmp.ll  tmp.txt  tmp10.ll  tmp2.ll  tmp2.txt  tmp4.ll  tmp8.ll  tmp_a.txt  tmp_reroll.cpp  ut
src/func_extract/app/: 1  2  23  compare_ila_rtl.cpp  compare_ila_rtl.h  complete_flow.cpp  func_extract.cpp  ila_gen.cpp  ila_gen.h  instr_count.txt  parse_sim_results.cpp  rand_test_gen.cpp  sim_gen.cpp  sim_gen.h  sim_gen_backup.cpp  tb_gen.cpp  tb_gen.h
src/func_extract/cmake/: FindSmtVlgCheck.cmake  FindTaintGenLib.cmake
src/func_extract/doc/: Makefile0  rules.txt  step.txt
src/func_extract/legacy/: auxiliary_files_gen.cpp
src/func_extract/log/: func_extract.yuzeng-ThinkPad-X250.yuzeng.log.WARNING.20210131-175155.19544
src/func_extract/src/: .parse_fill.cpp.swl  2  3  Makefile  algorithm.txt  ast.cpp  ast.h  auxiliary_files_gen.cpp  auxiliary_files_gen.h  branch_mux.cc  branch_mux.cpp  branch_mux.h  case.txt  case_part.txt  check_regs.cpp  check_regs.h  clean_goal.cpp  clean_goal.h  clean_verilog.cpp  clean_verilog.h  expr.cpp  expr.h  get_all_update.cpp  get_all_update.h  global_data_struct.cpp  global_data_struct.h  helloPass.cpp.bak  helper.cpp  helper.h  ins_context_stack.cpp  ins_context_stack.h  inv_gen.cpp  inv_gen.h  log.txt  main.cpp  main.h  make_define_fun.cpp  make_define_fun.h  op_constraint.cpp  op_constraint.h  (+26 more)
src/func_extract/tmp/: O3.ll  Oz.ll  add.ll  add_exact.ll  main.cpp  mem_info.txt  naive.ll  noDead.ll  reg_info.txt
src/func_extract/trial/: main.cpp
src/func_extract/tutorial/: README.md  code_structure.md  gen_rst_analysis.ys  gen_verilog_script.ys  make_simulations.txt
src/func_extract/unuses/: auxiliary_files_gen.h  make_define_fun.cpp  make_define_fun.h  pseudo_vlg_gen.h
src/func_extract/verilog-eg/: accumulate.v.res  two_bit_mult.v  two_bit_mult.v.res
src/live_analysis/: .gitignore  CMakeLists.txt  Makefile  not_asv.txt  rebuild.sh
src/live_analysis/app/: main.cpp  main.h
src/live_analysis/experiment/: NV_BLKBOX_SRC0_NEW.v  NV_BLKBOX_SRC0_NEW.v.clean  NV_BLKBOX_SRC0_NEW.v.clean.tainted.final  NV_NVDLA_CDP_REG_single_NEW.v.clean.tainted  experiment_orig.v  order.txt  scp.sh
src/live_analysis/misc/: algorithm_for_sig.txt
src/live_analysis/results/: invarRegs.txt
src/live_analysis/src/: global_data.h  helper.cpp  helper.h  op_taint_gen.cpp  op_taint_gen.h  pass_info.cpp  pass_info.h  syntax_patterns.cpp  syntax_patterns.h  taint_gen.cpp  taint_gen.h  types.h  varWidth.cpp  varWidth.h  vcd_parser.cpp  vcd_parser.h
src/live_analysis/tutorial/: README.md  S4_NEW.v  S4_NEW.v.clean.tainted  S4_NEW.v.clean.tainted.final  S_NEW.v  S_NEW.v.clean.tainted  S_NEW.v.clean.tainted.final  S_NEW.v.nocomment  T_NEW.v.clean  T_NEW.v.clean.tainted  T_NEW.v.clean.tainted.final  aes_128_NEW.v.clean.tainted  aes_128_NEW.v.clean.tainted.final  aes_128_NEW.v.nocomment  aes_top_NEW.v  aes_top_NEW.v.clean  aes_top_NEW.v.clean.tainted  aes_top_NEW.v.clean.tainted.final  aes_top_NEW.v.wire_output  aes_top_yosys.v  assert_reg_map.txt  expand_key_128_NEW.v  expand_key_128_NEW.v.clean  expand_key_128_NEW.v.clean.tainted  expand_key_128_NEW.v.clean.tainted.final  final_round_NEW.v  final_round_NEW.v.clean.tainted  final_round_NEW.v.clean.tainted.final  final_round_NEW.v.nocomment  one_round_NEW.v  one_round_NEW.v.clean.tainted  one_round_NEW.v.clean.tainted.final  one_round_NEW.v.nocomment  order.txt  reg16byte_NEW.v.clean.tainted  reg16byte_NEW.v.clean.tainted.final  reg16byte_NEW.v.nocomment  reg2byte_NEW.v  reg2byte_NEW.v.clean.tainted  reg2byte_NEW.v.clean.tainted.final  (+10 more)
src/smt_vlg_check/smt2ila/: CMakeLists.txt  Makefile  build.sh  out.v
src/taint_method/: .gitignore  .helper.cpp.swm  .helper.cpp.swn  .helper.h.swn  .op_taint_gen.cpp.swm  .op_taint_gen.cpp.swn  .taint_gen.cpp.swk  .taint_gen.cpp.swl  .taint_gen.cpp.swm  .taint_gen.cpp.swn  .taint_gen.h.swm  .taint_gen.h.swn  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_manual  README  VarWidth.cpp  VarWidth.h  a.out  a_old.out  analyze_reg_path.cpp  analyze_reg_path.h  cmake_install.cmake  exp.clean.tainted  global_data.h  helper.cpp  helper.h  main.cpp  main.h  not_asv.txt  op_taint_gen.cpp  op_taint_gen.h  pass_info.cpp  pass_info.h  taint_gen.cpp  taint_gen.h  taint_gen_v0.cpp  time.txt  tmp.txt
src/taint_method/app/: main.cpp  main.h
src/taint_method/assume_gen/: Makefile  PID_operation.txt  a.out  assume_gen.cpp  assume_gen.h  property0.txt  property1.txt  property10.txt  property11.txt  property12.txt  property13.txt  property14.txt  property15.txt  property16.txt  property17.txt  property2.txt  property3.txt  property4.txt  property5.txt  property6.txt  property7.txt  property8.txt  property9.txt
src/taint_method/experiment/: CKLNQD12PO4_NEW.v.clean.tainted  CKLNQD12PO4_NEW.v.clean.tainted.final  HLS_cdp_icvt_core_NEW.v  HLS_cdp_icvt_core_NEW.v.clean.tainted  HLS_cdp_icvt_core_NEW.v.clean.tainted.final  HLS_cdp_icvt_core_NEW.v.nocomment  HLS_cdp_icvt_core_NEW.v.wire_output  NV_BLKBOX_SRC0_NEW.v.clean.tainted  NV_NVDLA_BDMA_LOAD_csb_fifo_NEW.v.clean.tainted  NV_NVDLA_BDMA_csb_NEW.v  NV_NVDLA_BDMA_csb_NEW.v.clean  NV_NVDLA_BDMA_csb_NEW.v.clean.tainted  NV_NVDLA_BDMA_csb_NEW.v.clean.tainted.final  NV_NVDLA_BDMA_csb_NEW.v.reg_output  NV_NVDLA_BDMA_csb_NEW.v.wire_output  NV_NVDLA_CACC_CALC_fp_48b_NEW.v  NV_NVDLA_CACC_CALC_fp_48b_NEW.v.clean.tainted  NV_NVDLA_CACC_CALC_fp_48b_NEW.v.clean.tainted.final  NV_NVDLA_CACC_CALC_fp_48b_NEW.v.reg_output  NV_NVDLA_CACC_CALC_fp_48b_NEW.v.wire_output  NV_NVDLA_CDP_REG_single_NEW.v.clean  NV_NVDLA_CDP_REG_single_NEW.v.clean.tainted.final  NV_NVDLA_CDP_REG_single_NEW.v.nocomment  NV_NVDLA_CDP_REG_single_NEW.v.reg_output  NV_NVDLA_CDP_REG_single_NEW.v.wire_output  exp2.v  (+24 more)
src/vcd_preprocess/: CMakeLists.txt  Makefile  main.cpp
(+4497 files in other folders)
